fix(content): fix split view selector, cdm footer spacing

--- a/src/_content-wrap.less
+++ b/src/_content-wrap.less
@@ -86,7 +86,7 @@
   // ---------------------------------------------------------------------------
   :is(.post .row, .cdm .footer) {
     height: auto; // override .cdm .footer
-    padding: 0; // override .cdm .footer padding-left/-right
+    padding-left: 0; // override .cdm .footer padding-left
     border: none; // override .cdm.expanded .footer
     color: @fg-text-muted;
     font-size: @font-size-small;
@@ -521,7 +521,6 @@
       }
       .content-inner {
         margin: 0 5px;
-        padding-bottom: 20px;
       }
       .titleWrap {
         pointer-events: none;
